<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="10dp"
        app:cardUseCompatPadding="true">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/colorPrimary"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingStart="5dp"
                android:paddingEnd="5dp">

            <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:padding="5dp"
                    android:src="@mipmap/ic_launcher_round"/>

            <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:maxLines="2"
                    android:text="@string/app_name"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold|italic"/>

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvUpdateText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:padding="20dp"
                android:gravity="center"
                android:text="@string/update_app_text"
                android:textColor="@color/black"
                android:textSize="16sp"/>

        <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnUpdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:text="@string/Update"
                android:textSize="18sp"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>